--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I am Vikas Bhardwaj</h1>
     <h2>
-      a <span class="pro-span">Pro</span>gramer.
+      a <span class="pro-span">Pro</span>grammer.
     </h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
